# pardroid

./: .editorconfig  .gitignore  Makefile  README.md  version.mk
amiga/: Makefile  main.mk
amiga/configs/: amiga68000.config  debug.config  m68k-cia.config  m68k-net.config
amiga/scripts/: common-defs.mk  common-rules.mk  toolchain-m68k-gcc.mk  toolchain-m68k-vbcc.mk  toolchain-m68k.mk
amiga/src/: debug.c  pablo.c  parbox-client.c  parbox-engine.c  parbox-test.c  proto.c  proto.h  test-pario.c  test-proto.c  test-timer.c  timer.c
common/include/: fwid.h  machtag.h
common/src/: base_reg_def.h  bootloader_shared.h  channel_shared.h  fwid.c  fwid.h  handler_reg_def.h  machtag.c  machtag.h  pamela_shared.h  proto_atom_test_shared.h  proto_dev_shared.h  proto_io_shared.h  proto_shared.h  proto_test_shared.h  test-pamela.h
doc/: proto.md
docs/: conf.py  index.rst  pamela.rst
hardware/: .gitignore
hardware/pb_base/: pb_base.kicad_pcb  pb_base.kicad_prl  pb_base.kicad_pro  pb_base.kicad_sch
hardware/pb_cpu_pipico/: pb_cpu_pipico.kicad_pcb  pb_cpu_pipico.kicad_prl  pb_cpu_pipico.kicad_pro  pb_cpu_pipico.kicad_sch
hardware/pb_spi_net/: pb_spi_net.kicad_pcb  pb_spi_net.kicad_prl  pb_spi_net.kicad_pro  pb_spi_net.kicad_sch
hardware/teensy2.0/: fp-lib-table  (+5 more)
mcu/: CMakeLists.txt  Makefile  main.mk
mcu/configs/: ardunano.config  avrnetio.config  debug.config  flash.config  pbcrasbe.config  pbnano.config  pico.config  teensy20.config  teensy32.config
mcu/scripts/: checksize.py  cmake-rules.mk  common-defs.mk  common-rules.mk  flash-avrdude.mk  flash-halfkay.mk  flash-teensyloader.mk  genbootstrap.py  machtag.py  mt.c  pblfile.py  pblgen.py  rominfo.py  toolchain-avr.mk  toolchain-mk20.mk  vertag.py
mcu/src/: Makefile  main.c  proto.c  proto.h  test-base.c  test-handler.c  test-main.c  test-proto.c  uartutil.c  uartutil.h  util.h
mcu/src/arch/: arch.h  hw_dev.h  hw_i2c.h  hw_system.h  hw_uart.h  i2c.h  mach.h  pablo.h  pario.h  proto_low.h  strobe.h  system.h  uart.h  wiznet_low.h
mcu/src/arch/avr/: arch.h  bootloader.c  bootloader.h  crc.c  crc.h  flash.c  flash.h  hw_dev.c  hw_i2c.c  hw_led.c  hw_spi.c  hw_spi.h  hw_system.c  hw_uart.c  i2c.c  i2c.h  led.c  led.h  mem_int.h  pablo.c  pario.S  proto_low.S  proto_low_asm.S  proto_low_boot.S  spi.c  spi.h  strobe.c  strobe_low_asm.S  system.c  timer.c  timer.h  uart.c  wiznet_low.c
mcu/src/arch/avr/mach-ardunano/: mach.c  pario_pins.S  pario_pins.h  spi_pins.h
mcu/src/arch/avr/mach-avrnetio/: pario_pins.S  pario_pins.h  spi_pins.h
mcu/src/arch/avr/mach-teensy20/: dev_pins.h  led_pins.h  pario_pins.S  pario_pins.h  spi_pins.h  wiznet_pins.h
mcu/src/arch/common/: bootbase.c  bootbase.h  crc.c  crc.h  flash.h  hw_spi_common.h  nopgm.h  proto_low.c
mcu/src/arch/mk20/: arch.h  hw_dev.c  hw_i2c.c  hw_led.c  hw_led.h  hw_spi.c  hw_spi.h  hw_system.c  hw_timer.c  hw_timer.h  hw_uart.c  i2c.c  led.c  led.h  mem_int.h  proto_low.c  spi.c  spi.h  strobe.c  system.c  timer.c  timer.h  uart.c
mcu/src/arch/mk20/bsp/: eeprom.c  eeprom.h  mk20dx128.c  mk20dx256.ld  mk64fx512.ld  teensy3
mcu/src/arch/mk20/mach-teensy32/: pario_pins.h  spi_pins.h
mcu/src/arch/rp2/: arch.h  hw_i2c.c  hw_spi.c  hw_spi.h  hw_system.c  hw_uart.c  strobe.c
mcu/src/arch/rp2/mach-pico/: pario_pins.h
mcu/src/base/: debug.h  fw_info.h  mem.c  mem.h  rominfo.c  rominfo.h  uartutil.c  uartutil.h  util.c  util.h
mcu/src/contrib/fatfs/: README.md
mcu/src/disk/: disk.c  disk.h  disk_cmd.c  disk_cmd.h  disk_dev.h  disk_driver.h  disk_map.c  disk_map.h  disk_svc.c  disk_svc.h
mcu/src/driver/: blk_null.c  blk_null.h  driver.c  driver.h  driver_list.c  driver_list.h  drv_null.c  drv_null.h
mcu/src/driver/display/: display.c  display.h  font6x8.c  font6x8.h
mcu/src/driver/display/ssd1306/: ssd1306.c  ssd1306.h
mcu/src/driver/enc28j60/: drv_enc28j60.c  drv_enc28j60.h  enc28j60.c  enc28j60.h  enc28j60_regs.h  eth_enc.c  eth_enc.h
mcu/src/driver/fatfs/: fatfs_diskio.c  ffconf.h
mcu/src/driver/sdcard/: blk_sdraw.c  blk_sdraw.h  drv_sdcard.c  drv_sdcard.h  sdcard.c  sdcard.h  sdcard_defs.h
mcu/src/driver/ufat/: ufat.c  ufat.h
mcu/src/driver/wiznet/: wiz_defs.h  wiz_io.c  wiz_io.h  wiz_reg.c  wiz_reg.h  wiznet.c  wiznet.h
mcu/src/handler/: buffer.c  buffer.h  channel.c  channel.h  handler.c  handler.h  handler_list.c  handler_list.h  handler_reg.c  handler_reg.h  handler_regl.c  hnd_echo.c  hnd_echo.h  hnd_null.c  hnd_null.h  msgio.c
mcu/src/paloma/: channel.c  channel.h  driver.c  driver.h  handler.c  handler.h  handler_regl.h  msgio.c  paloma.c  paloma.h  paloma_api.h  paloma_cmd.c  paloma_cmd.h
mcu/src/pamela/: action.c  action.h  base_reg.c  base_reg.h  chan.c  chan.h  channel.c  channel.h  func.c  func.h  fw_info.h  handler.h  knok.c  offset.c  offset.h  pamela.c  pamela.h  pamela_handler.h  pamela_int.h  pamela_io.c  proto.c  proto.h  proto_api.c  proto_api.h  proto_spi.c  reg.c  reg.h  status.c  status.h  tables.c
mcu/src/pamela_req/: pamela_req.c  pamela_req.h  pamela_req_handler.h  pamela_req_int.h
mcu/src/param/: param.c  param.h  param_def.c  param_def.h
mcu/src/parbox/: action.c  action.h  func.c  func.h  handler.c  handler.h  offset.c  pend.c  pend.h  proto.c  proto.h  reg.c  reg.h  reg_def.c  reg_def.h  reg_ro.c  reg_ro.h  reg_ro_def.c  reg_ro_def.h  reg_rw.c  reg_rw.h  reg_rw_def.c  reg_rw_def.h  status.c  status.h  tables.c
mcu/src/proto/: action.c  base_reg.c  base_reg.h  func.c  func.h  knok.c  knok.h  knok_api.h  proto.c  proto.h  proto_api.h  proto_atom.c  proto_atom.h  proto_boot.c  proto_boot.h  proto_dev.c  proto_dev.h  proto_io.c  proto_io.h  reg.c  status.c  status.h  tables.c
mcu/src/test/: test-base.c  test-disk.c  test-display.c  test-enc28j60.c  test-fatfs.c  test-handler.c  test-net.c  test-paloma.c  test-pamela-req.c  test-pamela.c  test-param.c  test-proto-atom.c  test-proto-boot.c  test-proto-dev.c  test-proto-io.c  test-proto.c  test-sdcard.c  test-ufat.c  test-wiznet.c
mcu/src/tools/ufat/: ufat.c  ufat.h
scripts/: common-defs.mk  common-rules.mk  gencfg.mk  genconfig.py  machtag.py
(+256 files in other folders)
